# self-study

./: README.md
.obsidian/: app.json  workspace.json
2/: 2.64any_odd_one.c  2.69A_rotate_left.c  2.72buffer.c  2.74tsub_ok.c
Android/: Android_demo.md  Java.md  README.md
Android/Android_Programming_The_Big_Nerd_Ranch_Guide/: README.md
Architecture/: Software Architecture in Practice(4th).md  clean_architecture.md  event-driven.md  software_design.md
C++/C++ Primer Plus(6th Edition)/: README.md
C++/Qt_demo/: Qt.md  qt_demo.md
C++/The C++ Programming Language/: README.md
C++/link_script/: file.ld  link_script.md
C++/南方科技大学C++/: README.md  test.cpp
CMU 15-445 DB/: README.md
CS-340 Network/: Computer_Network:A_Top-Down_Approach.md
Car/: CAN.md
Compression/: Data Compression.md
Computer_Systems_A_Programmer’s_Perspective/: computer_system.md
Computer_Systems_A_Programmer’s_Perspective/ExamReview/: f11_p4.c
Data_Structure/: a.out  data_structure.md  test.c
Digital Circuits(Suzhou University-Xu Huang)/: README.md
FileSystem/: filesystem.md
Linux/: Linux.md
Linux/linux_kernel/: linux_kernel.md
MIT 15.213 CS/: computer_system.md
Machine_learning/: machine_learning.md
Microcontroller/: .clangd  README.md
Motor/: motor_control_begin.md
Operating_System/: test.c
Python/: pandas.md  python.md
Rust/: something.md
Rust/actix-web/webservice/: Cargo.toml
Rust/actix-web/webservice/src/: handlers.rs  routers.rs
Vector_car/: can_reverse_engineering.md
chapter2/: 2.58is_little_endian.c  2.59generate_a_word.c  2.80.c  2._.c  main.c
(+462 files in other folders)
