[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = {version = "1.0.132", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}

[[bin]]
name = "teacher-service"